# rules_tsgo_pnpm

./: LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
examples/basic/: BUILD.bazel  greeting.ts
examples/js_compat/: BUILD.bazel  ambient.d.ts  compat_entry.ts  compat_output_test.sh  dep.ts  tsconfig.commonjs.json
examples/json_runfiles/: BUILD.bazel  assert_runfiles.bzl  main.ts
examples/monorepo/app/: BUILD.bazel  main.ts
examples/monorepo/lib-a/: BUILD.bazel  greeting.ts
examples/monorepo/types/: BUILD.bazel
examples/with_bun/: BUILD.bazel  package.json  server.ts
examples/with_types/: BUILD.bazel  package.json  pnpm-lock.yaml
npm/: defs.bzl  extensions.bzl
npm/private/: bun_lock_parser.bzl  npm_types_repo.bzl  npm_utils.bzl  pnpm_lock_parser.bzl
pnpm/: defs.bzl  extensions.bzl
pnpm/private/: npm_types_repo.bzl  pnpm_lock_parser.bzl
tsgo/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
tsgo/private/: providers.bzl  ts_config.bzl  ts_types.bzl  tsgo_compile.bzl
