"""Bazel rules for TypeScript using tsgo (the Go-based TypeScript compiler)."""

module(
    name = "rules_tsgo",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

tsgo = use_extension("//tsgo:extensions.bzl", "tsgo")
tsgo.toolchain(version = "7.0.0-dev.20260204.1")
use_repo(tsgo, "tsgo_toolchains")

register_toolchains("@tsgo_toolchains//:all")

npm = use_extension("//npm:extensions.bzl", "npm")
npm.lock(lockfile = "//examples/with_types:pnpm-lock.yaml")
npm.lock(
    name = "bun_npm",
    lockfile = "//examples/with_bun:bun.lock",
)
use_repo(npm, "npm", "bun_npm")
